updated notes and code

--- a/RL.ipynb
+++ b/RL.ipynb
@@ -108,24 +108,30 @@
    "source": [
     "reward_type = 'test'    # 'test' or 'train'\n",
     "epi = [0,10] #[start,end] \n",
+    "epi_val = [490,499]\n",
     "\n",
     "\n",
-    "gym_env_test = BeamSelectionEnv(epi)\n",
+    "gym_env = BeamSelectionEnv(epi, reward_type)\n",
+    "gym_env_val = BeamSelectionEnv(epi_val)\n",
     "\n",
-    "gym_env_train = None\n",
-    "if (reward_type == 'train'):\n",
-    "    gym_env_train = BeamSelectionEnv(epi,reward_type)\n",
-    "else: \n",
-    "    gym_env_train = copy.deepcopy(gym_env_test)\n",
-    "    \n",
-    "n_steps = caviar_tools.linecount(epi)"
+    "n_steps = caviar_tools.linecount(epi)\n",
+    "n_steps_val = caviar_tools.linecount(epi_val)"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stderr",
+     "text": [
+      "/home/sundesh/Documents/git/ITU-Challenge/torch_rl/lib/python3.6/site-packages/gym/logger.py:34: UserWarning: \u001b[33mWARN: Box bound precision lowered by casting to float32\u001b[0m\n",
+      "  warnings.warn(colorize(\"%s: %s\" % (\"WARN\", msg % args), \"yellow\"))\n"
+     ]
+    }
+   ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "source": [
     "n_steps"
    ],
@@ -161,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "source": [
     "Transition = namedtuple('Transition',\n",
     "                        ('state', 'action', 'next_state', 'reward'))\n",
@@ -194,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "source": [
     "class DQN(nn.Module):\n",
     "\n",
@@ -227,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "source": [
     "tmp = DQN()\n",
     "sample = torch.rand((1,7))\n",
@@ -256,21 +262,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "source": [
     "BATCH_SIZE = 128\n",
     "GAMMA = 0.99\n",
     "EPS_START = 0.9\n",
-    "EPS_END = 0.05\n",
+    "EPS_END = 0.3\n",
     "\n",
     "# It depends on overall number of steps, basic intitution is that\n",
     "# once steps_done == EPS_DECAY then the probablity of choosing \n",
     "# random action is 33%; considering EPS_END is zero\n",
     "# As for ep = [0,10]; approx ep is 80k therefore exploration can be reduced to 33% around 50k\n",
     "# Also because of this factor smoothed accuracy matters more for training then seeing the average\n",
-    "EPS_DECAY = 80000\n",
+    "EPS_DECAY = n_steps*0.3\n",
     "\n",
-    "TARGET_UPDATE = 10"
+    "TARGET_UPDATE = 1000\n",
+    "VAL_STEP = 30000"
    ],
    "outputs": [],
    "metadata": {}
@@ -284,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "source": [
     "policy_net = DQN(11, 192).to(device)\n",
     "target_net = DQN(11, 192).to(device)\n",
@@ -326,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "source": [
     "def optimize_model():\n",
     "    if len(memory) < BATCH_SIZE:\n",
@@ -384,10 +391,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "source": [
     "# Tensorboard\n",
-    "log_dir = './mini_logs/eps_decay_8k' \n",
+    "log_dir = './mini_logs/with_val' \n",
+    "\n",
     "writer = SummaryWriter(log_dir=log_dir)"
    ],
    "outputs": [],
@@ -395,22 +403,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
+   "source": [
+    "def val(train_step:int,gym_env_val:gym.Env,n_steps_val:int=n_steps_val,\n",
+    "        writer:SummaryWriter=writer):\n",
+    "\n",
+    "    state = torch.zeros((1,11), dtype=torch.float32)\n",
+    "    ovr_reward = 0\n",
+    "    for i_episode in tqdm.tqdm(range(n_steps_val),desc='Validation'):\n",
+    "        # Select and perform an action\n",
+    "        action = select_action(state)\n",
+    "        # Observe new state\n",
+    "        next_state, reward, done, info = gym_env_val.step([action.item()//64, action.item()%64])\n",
+    "\n",
+    "\n",
+    "        ovr_reward+=reward.item()\n",
+    "\n",
+    "        next_state = next_state.astype(np.float32).reshape(1, next_state.shape[0])\n",
+    "        next_state = torch.tensor(next_state)\n",
+    "        reward = torch.tensor([reward], device=device).float()\n",
+    "\n",
+    "        # Move to the next state\n",
+    "        state = next_state\n",
+    "        \n",
+    "    writer.add_scalar('Val Overall Reward',ovr_reward,train_step)\n",
+    "    writer.add_scalar('Val Average Rewad',(ovr_reward/n_steps_val),train_step)\n",
+    "\n",
+    "    print(f'Validation Overall reward = {ovr_reward:.2f}. ' \\\n",
+    "        f' Validation Average Reward = {ovr_reward/n_steps:.4f}')\n",
+    "    gym_env_val.close()\n",
+    "    "
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "source": [
     "# Initialize the environment and state\n",
     "state = torch.zeros((1,11), dtype=torch.float32)\n",
     "ovr_reward = 0\n",
-    "for i_episode in tqdm.tqdm(range(n_steps)):\n",
+    "for i_episode in tqdm.tqdm(range(n_steps),desc='Train'):\n",
     "    # Select and perform an action\n",
     "    action = select_action(state)\n",
     "    # Observe new state\n",
-    "    next_state, reward, done, info = gym_env_train.step([action.item()//64, action.item()%64])\n",
+    "    next_state, reward, done, info = gym_env.step([action.item()//64, action.item()%64])\n",
     "\n",
-    "    if (reward_type == 'train'):\n",
-    "        next_state, reward, done, info = gym_env_test.step([action.item()//64, action.item()%64])\n",
-    "        ovr_reward+=reward.item()\n",
-    "    else:\n",
-    "        ovr_reward+=reward.item()\n",
+    "\n",
+    "    ovr_reward+=reward.item()\n",
     "\n",
     "    next_state = next_state.astype(np.float32).reshape(1, next_state.shape[0])\n",
     "    next_state = torch.tensor(next_state)\n",
@@ -433,8 +474,8 @@
     "    if i_episode % TARGET_UPDATE == 0:\n",
     "        target_net.load_state_dict(policy_net.state_dict())\n",
     "\n",
-    "    # if i_episode%100 == 0:\n",
-    "    #     print(f'{i_episode+1}/{n_steps} Iterations completed.')\n",
+    "    if (i_episode)%VAL_STEP == 0 or (i_episode == n_steps-1):\n",
+    "        val(i_episode,copy.deepcopy(gym_env_val))\n",
     "    \n",
     "writer.add_hparams(\n",
     "    {'BATCH_SIZE' : BATCH_SIZE,\n",
@@ -449,23 +490,31 @@
     "    }\n",
     ")\n",
     "\n",
-    "print(f'Overall reward = {ovr_reward:.2f}. ' \\\n",
+    "print(f'Overall Train reward = {ovr_reward:.2f}. ' \\\n",
     "    f'Average Reward = {ovr_reward/n_steps:.4f}')\n",
-    "gym_env_train.close()"
+    "gym_env.close()"
    ],
    "outputs": [
     {
      "output_type": "stream",
      "name": "stderr",
      "text": [
-      "100%|██████████| 68700/68700 [10:11<00:00, 112.29it/s]\n"
+      "Validation: 100%|██████████| 62598/62598 [02:32<00:00, 410.06it/s]\n",
+      "Train:   0%|          | 40/68700 [02:32<51:24:14,  2.70s/it]  "
      ]
     },
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Overall reward = -10230.06. Average Reward = -0.1489\n"
+      "Validation Overall reward = -9915.10.  Validation Average Reward = -0.1443\n"
+     ]
+    },
+    {
+     "output_type": "stream",
+     "name": "stderr",
+     "text": [
+      "Train:  15%|█▍        | 9992/68700 [04:00<05:58, 163.94it/s]"
      ]
     }
    ],
@@ -475,11 +524,11 @@
  "metadata": {
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3.6.13 64-bit ('ITU': conda)"
+   "display_name": "Python 3.6.9 64-bit ('torch_rl': venv)"
   },
   "language_info": {
    "name": "python",
-   "version": "3.6.13",
+   "version": "3.6.9",
    "mimetype": "text/x-python",
    "codemirror_mode": {
     "name": "ipython",
@@ -491,7 +540,7 @@
   },
   "orig_nbformat": 2,
   "interpreter": {
-   "hash": "704f8173b5278a07e1dad217082faca02c99b0dff81b24cc095b855fb1648990"
+   "hash": "f8337d322f02065436781250dc8881439cca8a58f1212dae4e4294dbbc4e4375"
   }
  },
  "nbformat": 4,
