--- a/RL.ipynb
+++ b/RL.ipynb
@@ -122,8 +122,8 @@
      "output_type": "stream",
      "name": "stderr",
      "text": [
-      "/home/sundesh/Documents/git/ITU-Challenge/torch_rl/lib/python3.6/site-packages/gym/logger.py:34: UserWarning: \u001b[33mWARN: Box bound precision lowered by casting to float32\u001b[0m\n",
-      "  warnings.warn(colorize(\"%s: %s\" % (\"WARN\", msg % args), \"yellow\"))\n"
+      "/home/mohit/anaconda3/envs/ITU/lib/python3.6/site-packages/gym/logger.py:30: UserWarning: \u001b[33mWARN: Box bound precision lowered by casting to float32\u001b[0m\n",
+      "  warnings.warn(colorize('%s: %s'%('WARN', msg % args), 'yellow'))\n"
      ]
     }
    ],
@@ -276,7 +276,7 @@
     "# Also because of this factor smoothed accuracy matters more for training then seeing the average\n",
     "EPS_DECAY = n_steps*0.3\n",
     "\n",
-    "TARGET_UPDATE = 1000\n",
+    "TARGET_UPDATE = 10\n",
     "VAL_STEP = 30000"
    ],
    "outputs": [],
@@ -304,13 +304,8 @@
     "n_actions = 64*3\n",
     "steps_done = 0\n",
     "\n",
-    "def select_action(state):\n",
-    "    global steps_done\n",
-    "    sample = random.random()\n",
-    "    eps_threshold = EPS_END + (EPS_START - EPS_END) * \\\n",
-    "        math.exp(-1. * steps_done / EPS_DECAY)\n",
-    "    steps_done += 1\n",
-    "    if sample > eps_threshold:\n",
+    "def select_action(state,val:bool=False):\n",
+    "    if val:\n",
     "        with torch.no_grad():\n",
     "            # t.max(1) will return largest column value of each row.\n",
     "            # second column on max result is index of where max element was\n",
@@ -318,8 +313,21 @@
     "            flattened_action = policy_net(state).max(dim = 1).indices\n",
     "            return torch.tensor([[flattened_action]], device=device, dtype=torch.long)\n",
     "    else:\n",
-    "        flattened_action = random.randrange(n_actions)\n",
-    "        return torch.tensor([[flattened_action]], device=device, dtype=torch.long)\n"
+    "        global steps_done\n",
+    "        sample = random.random()\n",
+    "        eps_threshold = EPS_END + (EPS_START - EPS_END) * \\\n",
+    "            math.exp(-1. * steps_done / EPS_DECAY)\n",
+    "        steps_done += 1\n",
+    "        if sample > eps_threshold:\n",
+    "            with torch.no_grad():\n",
+    "                # t.max(1) will return largest column value of each row.\n",
+    "                # second column on max result is index of where max element was\n",
+    "                # found, so we pick action with the larger expected reward.\n",
+    "                flattened_action = policy_net(state).max(dim = 1).indices\n",
+    "                return torch.tensor([[flattened_action]], device=device, dtype=torch.long)\n",
+    "        else:\n",
+    "            flattened_action = random.randrange(n_actions)\n",
+    "            return torch.tensor([[flattened_action]], device=device, dtype=torch.long)\n"
    ],
    "outputs": [],
    "metadata": {}
@@ -394,7 +402,7 @@
    "execution_count": 13,
    "source": [
     "# Tensorboard\n",
-    "log_dir = './mini_logs/with_val' \n",
+    "log_dir = './mini_logs_with_val/target_10' \n",
     "\n",
     "writer = SummaryWriter(log_dir=log_dir)"
    ],
@@ -410,9 +418,9 @@
     "\n",
     "    state = torch.zeros((1,11), dtype=torch.float32)\n",
     "    ovr_reward = 0\n",
-    "    for i_episode in tqdm.tqdm(range(n_steps_val),desc='Validation'):\n",
+    "    for i_episode in tqdm.tqdm_notebook(range(n_steps_val),desc='Validation'):\n",
     "        # Select and perform an action\n",
-    "        action = select_action(state)\n",
+    "        action = select_action(state,val=True)\n",
     "        # Observe new state\n",
     "        next_state, reward, done, info = gym_env_val.step([action.item()//64, action.item()%64])\n",
     "\n",
@@ -444,7 +452,7 @@
     "# Initialize the environment and state\n",
     "state = torch.zeros((1,11), dtype=torch.float32)\n",
     "ovr_reward = 0\n",
-    "for i_episode in tqdm.tqdm(range(n_steps),desc='Train'):\n",
+    "for i_episode in tqdm.tqdm_notebook(range(n_steps),desc='Train'):\n",
     "    # Select and perform an action\n",
     "    action = select_action(state)\n",
     "    # Observe new state\n",
@@ -474,7 +482,7 @@
     "    if i_episode % TARGET_UPDATE == 0:\n",
     "        target_net.load_state_dict(policy_net.state_dict())\n",
     "\n",
-    "    if (i_episode)%VAL_STEP == 0 or (i_episode == n_steps-1):\n",
+    "    if (i_episode+1)%VAL_STEP == 0 or (i_episode == n_steps-1):\n",
     "        val(i_episode,copy.deepcopy(gym_env_val))\n",
     "    \n",
     "writer.add_hparams(\n",
@@ -499,22 +507,96 @@
      "output_type": "stream",
      "name": "stderr",
      "text": [
-      "Validation: 100%|██████████| 62598/62598 [02:32<00:00, 410.06it/s]\n",
-      "Train:   0%|          | 40/68700 [02:32<51:24:14,  2.70s/it]  "
+      "/home/mohit/anaconda3/envs/ITU/lib/python3.6/site-packages/ipykernel_launcher.py:4: TqdmDeprecationWarning: This function will be removed in tqdm==5.0.0\n",
+      "Please use `tqdm.notebook.tqdm` instead of `tqdm.tqdm_notebook`\n",
+      "  after removing the cwd from sys.path.\n"
      ]
     },
     {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "Validation Overall reward = -9915.10.  Validation Average Reward = -0.1443\n"
-     ]
+     "output_type": "display_data",
+     "data": {
+      "text/plain": [
+       "Train:   0%|          | 0/68700 [00:00<?, ?it/s]"
+      ],
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "373471b629ba4df28a48b8854c26d835"
+      }
+     },
+     "metadata": {}
     },
     {
      "output_type": "stream",
      "name": "stderr",
      "text": [
-      "Train:  15%|█▍        | 9992/68700 [04:00<05:58, 163.94it/s]"
+      "/home/mohit/anaconda3/envs/ITU/lib/python3.6/site-packages/ipykernel_launcher.py:6: TqdmDeprecationWarning: This function will be removed in tqdm==5.0.0\n",
+      "Please use `tqdm.notebook.tqdm` instead of `tqdm.tqdm_notebook`\n",
+      "  \n"
+     ]
+    },
+    {
+     "output_type": "display_data",
+     "data": {
+      "text/plain": [
+       "Validation:   0%|          | 0/62598 [00:00<?, ?it/s]"
+      ],
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "497eb3fcab324fa18becdf31f0faaa08"
+      }
+     },
+     "metadata": {}
+    },
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Validation Overall reward = -9888.54.  Validation Average Reward = -0.1439\n"
+     ]
+    },
+    {
+     "output_type": "display_data",
+     "data": {
+      "text/plain": [
+       "Validation:   0%|          | 0/62598 [00:00<?, ?it/s]"
+      ],
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "a6e1f1d27bf54f1fa06ee867d478f3f0"
+      }
+     },
+     "metadata": {}
+    },
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Validation Overall reward = -10550.86.  Validation Average Reward = -0.1536\n"
+     ]
+    },
+    {
+     "output_type": "display_data",
+     "data": {
+      "text/plain": [
+       "Validation:   0%|          | 0/62598 [00:00<?, ?it/s]"
+      ],
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "c5d5007aa8594d809ee920b169f904b5"
+      }
+     },
+     "metadata": {}
+    },
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Validation Overall reward = -9452.27.  Validation Average Reward = -0.1376\n",
+      "Overall Train reward = -10406.81. Average Reward = -0.1515\n"
      ]
     }
    ],
@@ -524,11 +606,11 @@
  "metadata": {
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3.6.9 64-bit ('torch_rl': venv)"
+   "display_name": "Python 3.6.13 64-bit ('ITU': conda)"
   },
   "language_info": {
    "name": "python",
-   "version": "3.6.9",
+   "version": "3.6.13",
    "mimetype": "text/x-python",
    "codemirror_mode": {
     "name": "ipython",
@@ -540,7 +622,7 @@
   },
   "orig_nbformat": 2,
   "interpreter": {
-   "hash": "f8337d322f02065436781250dc8881439cca8a58f1212dae4e4294dbbc4e4375"
+   "hash": "704f8173b5278a07e1dad217082faca02c99b0dff81b24cc095b855fb1648990"
   }
  },
  "nbformat": 4,
