updated DQN code and added A2C code

--- a/RL.ipynb
+++ b/RL.ipynb
@@ -122,8 +122,8 @@
      "output_type": "stream",
      "name": "stderr",
      "text": [
-      "/home/mohit/anaconda3/envs/ITU/lib/python3.6/site-packages/gym/logger.py:30: UserWarning: \u001b[33mWARN: Box bound precision lowered by casting to float32\u001b[0m\n",
-      "  warnings.warn(colorize('%s: %s'%('WARN', msg % args), 'yellow'))\n"
+      "/home/sundesh/Documents/git/ITU-Challenge/torch_rl/lib/python3.6/site-packages/gym/logger.py:34: UserWarning: \u001b[33mWARN: Box bound precision lowered by casting to float32\u001b[0m\n",
+      "  warnings.warn(colorize(\"%s: %s\" % (\"WARN\", msg % args), \"yellow\"))\n"
      ]
     }
    ],
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "source": [
     "class DQN(nn.Module):\n",
     "\n",
@@ -211,8 +211,12 @@
     "            self.create_linear(inputs,16),\n",
     "            self.create_linear(16, 32),\n",
     "            self.create_linear(32,64),\n",
-    "            self.create_linear(64,outputs)\n",
+    "            self.create_linear(64,256)\n",
     "        )\n",
+    "\n",
+    "        self.value_linear = self.create_linear(256,1)\n",
+    "        self.action_linear = self.create_linear(256,outputs)\n",
+    "\n",
     "    \n",
     "    def create_linear(self,inp:int,out:int)-> nn.Module:\n",
     "        return nn.Sequential(\n",
@@ -224,7 +228,15 @@
     "    def forward(self, x):\n",
     "        x = x.to(device)\n",
     "        x = self.linear(x)\n",
-    "        return x\n",
+    "\n",
+    "        value = self.value_linear(x)\n",
+    "        adv = self.action_linear(x)\n",
+    "\n",
+    "\n",
+    "        advAverage = torch.mean(adv, dim=1, keepdim=True)\n",
+    "        \n",
+    "        out = value + adv - advAverage\n",
+    "        return out\n",
     "\n",
     "        "
    ],
@@ -233,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "source": [
     "tmp = DQN()\n",
     "sample = torch.rand((1,7))\n",
@@ -248,7 +260,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 9
+     "execution_count": 11
     }
    ],
    "metadata": {}
@@ -262,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "source": [
     "BATCH_SIZE = 128\n",
     "GAMMA = 0.99\n",
@@ -276,7 +288,7 @@
     "# Also because of this factor smoothed accuracy matters more for training then seeing the average\n",
     "EPS_DECAY = n_steps*0.3\n",
     "\n",
-    "TARGET_UPDATE = 10\n",
+    "TARGET_UPDATE = 1000\n",
     "VAL_STEP = 30000"
    ],
    "outputs": [],
@@ -291,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "source": [
     "policy_net = DQN(11, 192).to(device)\n",
     "target_net = DQN(11, 192).to(device)\n",
@@ -341,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "source": [
     "def optimize_model():\n",
     "    if len(memory) < BATCH_SIZE:\n",
@@ -399,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "source": [
     "# Tensorboard\n",
     "log_dir = './mini_logs_with_val/target_10' \n",
@@ -411,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "source": [
     "def val(train_step:int,gym_env_val:gym.Env,n_steps_val:int=n_steps_val,\n",
     "        writer:SummaryWriter=writer):\n",
@@ -438,7 +450,7 @@
     "    writer.add_scalar('Val Average Rewad',(ovr_reward/n_steps_val),train_step)\n",
     "\n",
     "    print(f'Validation Overall reward = {ovr_reward:.2f}. ' \\\n",
-    "        f' Validation Average Reward = {ovr_reward/n_steps:.4f}')\n",
+    "        f' Validation Average Reward = {ovr_reward/n_steps_val:.4f}')\n",
     "    gym_env_val.close()\n",
     "    "
    ],
@@ -447,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "source": [
     "# Initialize the environment and state\n",
     "state = torch.zeros((1,11), dtype=torch.float32)\n",
@@ -483,7 +495,7 @@
     "        target_net.load_state_dict(policy_net.state_dict())\n",
     "\n",
     "    if (i_episode+1)%VAL_STEP == 0 or (i_episode == n_steps-1):\n",
-    "        val(i_episode,copy.deepcopy(gym_env_val))\n",
+    "        val(i_episode, copy.deepcopy(gym_env_val))\n",
     "    \n",
     "writer.add_hparams(\n",
     "    {'BATCH_SIZE' : BATCH_SIZE,\n",
@@ -507,7 +519,7 @@
      "output_type": "stream",
      "name": "stderr",
      "text": [
-      "/home/mohit/anaconda3/envs/ITU/lib/python3.6/site-packages/ipykernel_launcher.py:4: TqdmDeprecationWarning: This function will be removed in tqdm==5.0.0\n",
+      "/home/sundesh/Documents/git/ITU-Challenge/torch_rl/lib/python3.6/site-packages/ipykernel_launcher.py:4: TqdmDeprecationWarning: This function will be removed in tqdm==5.0.0\n",
       "Please use `tqdm.notebook.tqdm` instead of `tqdm.tqdm_notebook`\n",
       "  after removing the cwd from sys.path.\n"
      ]
@@ -521,7 +533,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "373471b629ba4df28a48b8854c26d835"
+       "model_id": "e007a7c521a549ec86a785e8c2626dc5"
       }
      },
      "metadata": {}
@@ -530,7 +542,7 @@
      "output_type": "stream",
      "name": "stderr",
      "text": [
-      "/home/mohit/anaconda3/envs/ITU/lib/python3.6/site-packages/ipykernel_launcher.py:6: TqdmDeprecationWarning: This function will be removed in tqdm==5.0.0\n",
+      "/home/sundesh/Documents/git/ITU-Challenge/torch_rl/lib/python3.6/site-packages/ipykernel_launcher.py:6: TqdmDeprecationWarning: This function will be removed in tqdm==5.0.0\n",
       "Please use `tqdm.notebook.tqdm` instead of `tqdm.tqdm_notebook`\n",
       "  \n"
      ]
@@ -544,7 +556,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "497eb3fcab324fa18becdf31f0faaa08"
+       "model_id": "3b130f4f435b46b38414db4141b0d9f5"
       }
      },
      "metadata": {}
@@ -553,7 +565,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Validation Overall reward = -9888.54.  Validation Average Reward = -0.1439\n"
+      "Validation Overall reward = -10245.90.  Validation Average Reward = -0.1637\n"
      ]
     },
     {
@@ -565,7 +577,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "a6e1f1d27bf54f1fa06ee867d478f3f0"
+       "model_id": "1d3b5ed2223144cdaa10d422e07771fe"
       }
      },
      "metadata": {}
@@ -574,7 +586,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Validation Overall reward = -10550.86.  Validation Average Reward = -0.1536\n"
+      "Validation Overall reward = -10245.62.  Validation Average Reward = -0.1637\n"
      ]
     },
     {
@@ -586,7 +598,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "c5d5007aa8594d809ee920b169f904b5"
+       "model_id": "58171e02efff48a78cb82e3af755e07f"
       }
      },
      "metadata": {}
@@ -595,22 +607,29 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Validation Overall reward = -9452.27.  Validation Average Reward = -0.1376\n",
-      "Overall Train reward = -10406.81. Average Reward = -0.1515\n"
+      "Validation Overall reward = -10242.89.  Validation Average Reward = -0.1636\n",
+      "Overall Train reward = -10865.37. Average Reward = -0.1582\n"
      ]
     }
    ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [],
+   "outputs": [],
    "metadata": {}
   }
  ],
  "metadata": {
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3.6.13 64-bit ('ITU': conda)"
+   "display_name": "Python 3.6.9 64-bit ('torch_rl': venv)"
   },
   "language_info": {
    "name": "python",
-   "version": "3.6.13",
+   "version": "3.6.9",
    "mimetype": "text/x-python",
    "codemirror_mode": {
     "name": "ipython",
@@ -622,7 +641,7 @@
   },
   "orig_nbformat": 2,
   "interpreter": {
-   "hash": "704f8173b5278a07e1dad217082faca02c99b0dff81b24cc095b855fb1648990"
+   "hash": "f8337d322f02065436781250dc8881439cca8a58f1212dae4e4294dbbc4e4375"
   }
  },
  "nbformat": 4,
