--- a/RL.ipynb
+++ b/RL.ipynb
@@ -289,7 +289,9 @@
     "EPS_DECAY = n_steps*0.3\n",
     "\n",
     "TARGET_UPDATE = 1000\n",
-    "VAL_STEP = 30000"
+    "VAL_STEP = 30000\n",
+    "\n",
+    "EPOCH = 1"
    ],
    "outputs": [],
    "metadata": {}
@@ -462,57 +464,59 @@
    "execution_count": 17,
    "source": [
     "# Initialize the environment and state\n",
-    "state = torch.zeros((1,11), dtype=torch.float32)\n",
-    "ovr_reward = 0\n",
-    "for i_episode in tqdm.tqdm_notebook(range(n_steps),desc='Train'):\n",
-    "    # Select and perform an action\n",
-    "    action = select_action(state)\n",
-    "    # Observe new state\n",
-    "    next_state, reward, done, info = gym_env.step([action.item()//64, action.item()%64])\n",
+    "for i in range(0,EPOCH):\n",
+    "    gym_env.reset()\n",
+    "    state = torch.zeros((1,11), dtype=torch.float32)\n",
+    "    ovr_reward = 0\n",
+    "    for i_episode in tqdm.tqdm_notebook(range(n_steps),desc='Train'):\n",
+    "        # Select and perform an action\n",
+    "        action = select_action(state)\n",
+    "        # Observe new state\n",
+    "        next_state, reward, done, info = gym_env.step([action.item()//64, action.item()%64])\n",
     "\n",
     "\n",
-    "    ovr_reward+=reward.item()\n",
+    "        ovr_reward+=reward.item()\n",
     "\n",
-    "    next_state = next_state.astype(np.float32).reshape(1, next_state.shape[0])\n",
-    "    next_state = torch.tensor(next_state)\n",
-    "    reward = torch.tensor([reward], device=device).float()\n",
+    "        next_state = next_state.astype(np.float32).reshape(1, next_state.shape[0])\n",
+    "        next_state = torch.tensor(next_state)\n",
+    "        reward = torch.tensor([reward], device=device).float()\n",
     "\n",
-    "    writer.add_scalar('episode_reward',reward,i_episode)\n",
+    "        writer.add_scalar('episode_reward',reward,i_episode)\n",
     "\n",
-    "    # print(next_state)\n",
-    "    # print(state)\n",
-    "    # Store the transition in memory\n",
-    "    memory.push(state, action, next_state, reward)\n",
+    "        # print(next_state)\n",
+    "        # print(state)\n",
+    "        # Store the transition in memory\n",
+    "        memory.push(state, action, next_state, reward)\n",
     "\n",
-    "    # Move to the next state\n",
-    "    state = next_state\n",
+    "        # Move to the next state\n",
+    "        state = next_state\n",
     "\n",
-    "    # Perform one step of the optimization (on the policy network)\n",
-    "    optimize_model()\n",
-    "    \n",
-    "    # Update the target network, copying all weights and biases in DQN\n",
-    "    if i_episode % TARGET_UPDATE == 0:\n",
-    "        target_net.load_state_dict(policy_net.state_dict())\n",
+    "        # Perform one step of the optimization (on the policy network)\n",
+    "        optimize_model()\n",
+    "        \n",
+    "        # Update the target network, copying all weights and biases in DQN\n",
+    "        if i_episode % TARGET_UPDATE == 0:\n",
+    "            target_net.load_state_dict(policy_net.state_dict())\n",
     "\n",
-    "    if (i_episode+1)%VAL_STEP == 0 or (i_episode == n_steps-1):\n",
-    "        val(i_episode, copy.deepcopy(gym_env_val))\n",
-    "    \n",
-    "writer.add_hparams(\n",
-    "    {'BATCH_SIZE' : BATCH_SIZE,\n",
-    "    'GAMMA' : GAMMA,\n",
-    "    'EPS_START' : EPS_START,\n",
-    "    'EPS_END' : EPS_END,\n",
-    "    'EPS_DECAY' : EPS_DECAY,\n",
-    "    'TARGET_UPDATE' :TARGET_UPDATE},\n",
-    "    {\n",
-    "        'Overall Reward':ovr_reward,\n",
-    "        'Average Reward': ovr_reward/n_steps\n",
-    "    }\n",
-    ")\n",
+    "        if (i_episode+1)%VAL_STEP == 0 or (i_episode == n_steps-1):\n",
+    "            val(i_episode, gym_env_val.reset())\n",
+    "        \n",
+    "    writer.add_hparams(\n",
+    "        {'BATCH_SIZE' : BATCH_SIZE,\n",
+    "        'GAMMA' : GAMMA,\n",
+    "        'EPS_START' : EPS_START,\n",
+    "        'EPS_END' : EPS_END,\n",
+    "        'EPS_DECAY' : EPS_DECAY,\n",
+    "        'TARGET_UPDATE' :TARGET_UPDATE},\n",
+    "        {\n",
+    "            'Overall Reward':ovr_reward,\n",
+    "            'Average Reward': ovr_reward/n_steps\n",
+    "        }\n",
+    "    )\n",
     "\n",
-    "print(f'Overall Train reward = {ovr_reward:.2f}. ' \\\n",
-    "    f'Average Reward = {ovr_reward/n_steps:.4f}')\n",
-    "gym_env.close()"
+    "    print(f'Overall Train reward = {ovr_reward:.2f}. ' \\\n",
+    "        f'Average Reward = {ovr_reward/n_steps:.4f}')\n",
+    "    gym_env.close()"
    ],
    "outputs": [
     {
