--- a/A2C.ipynb
+++ b/A2C.ipynb
@@ -245,7 +245,7 @@
     "class Policy():\n",
     "    def __init__(self):\n",
     "         # Episode policy and reward history \n",
-    "        self.policy_history = Variable(torch.Tensor()) \n",
+    "        self.policy_history = Variable(torch.Tensor(), requires_grad=True) \n",
     "        self.reward_episode = []\n",
     "        # Overall reward and loss history\n",
     "        self.reward_history = []\n",
@@ -352,7 +352,7 @@
     "    else:\n",
     "        with torch.no_grad():\n",
     "            action = torch.max(policy_net(state),dim=1)\n",
-    "            return action\n",
+    "            return action.indices\n",
     "\n",
     "    # if val:\n",
     "    #     with torch.no_grad():\n",
@@ -417,9 +417,8 @@
     "    rewards = torch.FloatTensor(rewards)\n",
     "    rewards = (rewards - rewards.mean()) / (rewards.std() + np.finfo(np.float32).eps)\n",
     "    \n",
-    "    print(rewards)\n",
     "    # Calculate loss\n",
-    "    loss = (torch.sum(torch.mul(policy.policy_history, Variable(rewards)).mul(-1), -1))\n",
+    "    loss = (torch.sum(torch.mul(policy.policy_history, Variable(rewards, requires_grad=True)).mul(-1), -1))\n",
     "    \n",
     "    # Update network weights\n",
     "    optimizer.zero_grad()\n",
@@ -427,12 +426,11 @@
     "    optimizer.step()\n",
     "\n",
     "    writer.add_scalar('Loss',loss.item(),n_step)\n",
-    "    writer.add_scalar('Rewards',rewards.item(),n_step)\n",
     "    \n",
     "    #Save and intialize episode history counters\n",
-    "    policy.loss_history.append(loss.data[0])\n",
+    "    policy.loss_history.append(loss.item())\n",
     "    policy.reward_history.append(np.sum(policy.reward_episode))\n",
-    "    policy.policy_history = Variable(torch.Tensor())\n",
+    "    policy.policy_history = Variable(torch.Tensor(), requires_grad=True)\n",
     "    policy.reward_episode= []"
    ],
    "outputs": [],
@@ -505,20 +503,22 @@
     "\n",
     "    state = torch.zeros((1,11), dtype=torch.float32)\n",
     "    running_reward = 0.0\n",
-    "    \n",
-    "    for episode in tqdm.tqdm_notebook(range(n_steps_val),desc='Train'):\n",
+    "    for episode in tqdm.tqdm_notebook(range(n_steps_val),desc='Val'):\n",
     "        # Reset environment and record the starting state\n",
     "        done = False       \n",
     "\n",
     "        action = select_action(state, val = 'True')\n",
     "        # Step through environment using chosen action\n",
-    "        state, reward, done, _ = gym_env_val.step([action.data[0]//64,action.data[0]%64])\n",
+    "        state, reward, done, _ = gym_env_val.step([action.item()//64,action.item()%64])\n",
+    "\n",
+    "        state = state.astype(np.float32).reshape(1, state.shape[0])\n",
+    "        state = torch.tensor(state)\n",
     "        running_reward +=reward\n",
     "        \n",
-    "        if done:\n",
-    "            break\n",
+    "        # if done:\n",
+    "        #     break\n",
     "    \n",
-    "    writer.add_scalar('Val Reward',running_reward,train_step)\n",
+    "    writer.add_scalar('Val Reward',running_reward/n_steps_val,train_step)\n",
     "    gym_env_val.close()\n",
     "    print(f'Validation Reward {running_reward/n_steps_val}')\n"
    ],
@@ -545,13 +545,15 @@
     "\n",
     "    # Save reward\n",
     "    policy.reward_episode.append(reward)\n",
+    "    writer.add_scalar('Rewards',reward.item(),episode)\n",
+    "    ovr_reward+=reward.item()\n",
     "    \n",
     "\n",
     "    if (episode + 1)%10==0:\n",
     "        update_policy(episode)\n",
     "\n",
-    "    if (episode+1)%VAL_STEP == 0 or (episode == n_steps-1):\n",
-    "        val(episode, gym_env_val.reset())\n",
+    "    if (episode)%VAL_STEP == 0 or (episode == n_steps-1):\n",
+    "        val(episode, copy.deepcopy(gym_env_val))\n",
     "\n",
     "\n",
     "writer.add_hparams(\n",
@@ -589,7 +591,30 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "98704de2dec24609a6e4f5a65c6a5900"
+       "model_id": "f6c8cae876ee47858169bb5359744e0c"
+      }
+     },
+     "metadata": {}
+    },
+    {
+     "output_type": "stream",
+     "name": "stderr",
+     "text": [
+      "/home/sundesh/Documents/git/ITU-Challenge/torch_rl/lib/python3.6/site-packages/ipykernel_launcher.py:6: TqdmDeprecationWarning: This function will be removed in tqdm==5.0.0\n",
+      "Please use `tqdm.notebook.tqdm` instead of `tqdm.tqdm_notebook`\n",
+      "  \n"
+     ]
+    },
+    {
+     "output_type": "display_data",
+     "data": {
+      "text/plain": [
+       "Val:   0%|          | 0/62598 [00:00<?, ?it/s]"
+      ],
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "d9ebc9b4413542779d1cfa73c606cf48"
       }
      },
      "metadata": {}
@@ -598,22 +623,71 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "tensor([ 2.7668,  0.1973, -0.1196, -0.1150, -0.4345, -0.4331, -0.4317, -0.4303,\n",
-      "        -0.4288, -0.5712])\n"
+      "Validation Reward -0.16733134193588364\n"
      ]
     },
     {
-     "output_type": "error",
-     "ename": "RuntimeError",
-     "evalue": "element 0 of tensors does not require grad and does not have a grad_fn",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-18-fde9e488ea7c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mepisode\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m%\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m==\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 20\u001b[0;31m         \u001b[0mupdate_policy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mepisode\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     21\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mepisode\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m%\u001b[0m\u001b[0mVAL_STEP\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m0\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mepisode\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0mn_steps\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-15-28a3def508aa>\u001b[0m in \u001b[0;36mupdate_policy\u001b[0;34m(n_step)\u001b[0m\n\u001b[1;32m     18\u001b[0m     \u001b[0;31m# Update network weights\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m     \u001b[0moptimizer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mzero_grad\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 20\u001b[0;31m     \u001b[0mloss\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     21\u001b[0m     \u001b[0moptimizer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/Documents/git/ITU-Challenge/torch_rl/lib/python3.6/site-packages/torch/_tensor.py\u001b[0m in \u001b[0;36mbackward\u001b[0;34m(self, gradient, retain_graph, create_graph, inputs)\u001b[0m\n\u001b[1;32m    253\u001b[0m                 \u001b[0mcreate_graph\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcreate_graph\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    254\u001b[0m                 inputs=inputs)\n\u001b[0;32m--> 255\u001b[0;31m         \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mautograd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgradient\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mretain_graph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcreate_graph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minputs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0minputs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    256\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    257\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mregister_hook\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhook\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/Documents/git/ITU-Challenge/torch_rl/lib/python3.6/site-packages/torch/autograd/__init__.py\u001b[0m in \u001b[0;36mbackward\u001b[0;34m(tensors, grad_tensors, retain_graph, create_graph, grad_variables, inputs)\u001b[0m\n\u001b[1;32m    147\u001b[0m     Variable._execution_engine.run_backward(\n\u001b[1;32m    148\u001b[0m         \u001b[0mtensors\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgrad_tensors_\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mretain_graph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcreate_graph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minputs\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 149\u001b[0;31m         allow_unreachable=True, accumulate_grad=True)  # allow_unreachable flag\n\u001b[0m\u001b[1;32m    150\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    151\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mRuntimeError\u001b[0m: element 0 of tensors does not require grad and does not have a grad_fn"
+     "output_type": "display_data",
+     "data": {
+      "text/plain": [
+       "Val:   0%|          | 0/62598 [00:00<?, ?it/s]"
+      ],
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "a7e6abca63f24bd5a2792834f2a2bd8b"
+      }
+     },
+     "metadata": {}
+    },
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Validation Reward -0.1673658889273159\n"
+     ]
+    },
+    {
+     "output_type": "display_data",
+     "data": {
+      "text/plain": [
+       "Val:   0%|          | 0/62598 [00:00<?, ?it/s]"
+      ],
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "ffb5614a14ff4a3c8815d84b1454268f"
+      }
+     },
+     "metadata": {}
+    },
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Validation Reward -0.1672124497354775\n"
+     ]
+    },
+    {
+     "output_type": "display_data",
+     "data": {
+      "text/plain": [
+       "Val:   0%|          | 0/62598 [00:00<?, ?it/s]"
+      ],
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "7b98730a053347acbbbb611c6031fda9"
+      }
+     },
+     "metadata": {}
+    },
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Validation Reward -0.16717067486864717\n",
+      "Overall Train reward = 0.00. Average Reward = 0.0000\n"
      ]
     }
    ],
